# adventofcode

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md
2015/day01/p1/: main.cpp
2015/day01/p2/: main.cpp
2015/day02/p1/: main.cpp
2015/day02/p2/: main.cpp
2015/day05/p1/: main.cpp
2015/day05/p2/: main.cpp
2015/day06/p1/: main.cpp
2015/day06/p2/: main.cpp
2015/day07/p1/: main.cpp
2015/day07/p2/: main.cpp
2015/day08/p1/: main.cpp
2015/day08/p2/: main.cpp
2015/day09/p1/: main.cpp
2015/day09/p2/: main.cpp
2015/day1/p1/: main.cpp
2015/day1/p2/: main.cpp
2015/day10/p1/: main.cpp
2015/day11/p1/: main.cpp
2015/day11/p2/: main.cpp
2015/day12/p1/: main.cpp
2015/day12/p2/: main.cpp
2015/day13/p1/: main.cpp
2015/day13/p2/: main.cpp
2015/day14/p1/: main.cpp
2015/day14/p2/: main.cpp
2015/day15/p1/: main.cpp
2015/day15/p2/: main.cpp
2015/day16/p1/: main.cpp
2015/day16/p2/: main.cpp
2015/day17/p1/: main.cpp
2015/day17/p2/: main.cpp
2015/day18/p1/: main.cpp
2015/day18/p2/: main.cpp
2015/day19/p1/: main.cpp
2015/day19/p2/: main.cpp
2015/day2/p1/: main.cpp
2015/day2/p2/: main.cpp
2015/day20/p1/: main.cpp
2015/day20/p2/: main.cpp
2015/day21/p1/: main.cpp
2015/day22/p1/: example1.txt  example2.txt  input.txt  main.cpp
2015/day23/p1/: main.cpp
2015/day24/p1/: main.cpp
2015/day25/p1/: main.cpp
2015/day3/p1/: main.cpp
2015/day3/p2/: main.cpp
2015/day4/p1/: main.cpp
2015/day4/p2/: main.cpp
2015/day5/p1/: main.cpp
2015/day5/p2/: main.cpp
2015/day6/p1/: main.cpp
2015/day6/p2/: main.cpp
2015/day7/p1/: main.cpp
2015/day7/p2/: main.cpp
2015/day8/p1/: main.cpp
2015/day8/p2/: main.cpp
2015/day9/p1/: main.cpp
2015/day9/p2/: main.cpp
2015/lib/: StringUtil.h
2016/day01/p1/: main.cpp
2016/day01/p2/: main.cpp
2016/day02/p1/: main.cpp
2016/day02/p2/: main.cpp
2016/day03/p1/: example1.txt  main.cpp
2016/day03/p2/: main.cpp
2016/day04/p1/: main.cpp
2016/day04/p2/: main.cpp
2016/day05/p1/: main.cpp
2016/day05/p2/: main.cpp
2016/day06/p1/: main.cpp
2016/day06/p2/: main.cpp
2016/day07/p1/: example.txt  main.cpp
2016/day07/p2/: main.cpp
2016/day08/p1/: main.cpp
2016/day09/p1/: main.cpp
2016/day09/p2/: main.cpp
2016/day10/p1/: main.cpp
2016/day11/p1/: main.cpp
2016/day12/p1/: main.cpp
2016/day13/p1/: Cargo.toml
2016/day13/p2/: Cargo.toml
2019/day01/p1/: main.cpp
2019/day02/p1/: main.cpp
2019/day02/p2/: main.cpp
2019/day03/p1/: main.cpp
2019/day03/p2/: main.cpp
2019/day04/p1/: main.cpp
2019/day04/p2/: main.cpp
2019/day05/p1/: main.cpp
2019/day05/p2/: main.cpp
2019/day06/p1/: main.cpp
2019/day06/p2/: main.cpp
2019/day07/p1/: main.cpp
2019/day07/p2/: main.cpp
2019/day08/p1/: main.cpp
2019/day08/p2/: main.cpp
2019/day09/p1/: main.cpp
2019/day09/p2/: main.cpp
2019/day1/p1/: main.cpp
2019/day1/p2/: main.cpp
2019/day10/p1/: main.cpp
2019/day10/p2/: main.cpp
2019/day11/p1/: main.cpp
2019/day11/p2/: main.cpp
2019/day12/p1/: main.cpp
2019/day12/p2/: main.cpp
2019/day13/p1/: main.cpp
2019/day13/p2/: main.cpp
2019/day14/p1/: main.cpp
2019/day14/p2/: main.cpp
2019/day15/p1/: main.cpp
2019/day15/p2/: main.cpp
2019/day16/p1/: main.cpp
2019/day16/p2/: main.cpp
2019/day17/p1/: main.cpp
2019/day17/p2/: instructions.txt  main.cpp
2019/day18/p1/: main.cpp
2019/day19/p1/: main.cpp
2019/day19/p2/: main.cpp
2019/day2/p1/: main.cpp
2019/day2/p2/: main.cpp
2019/day20/p1/: main.cpp  text.txt
2019/day20/p2/: main.cpp
2019/day21/p1/: main.cpp
2019/day21/p2/: main.cpp
2019/day22/p1/: main.cpp  technique_2_example1.txt
2019/day22/p2/: main.cpp
2019/day23/p1/: main.cpp
2019/day23/p2/: main.cpp
2019/day24/p1/: main.cpp
2019/day24/p2/: main.cpp
2019/day25/: map.txt
2019/day25/p1/: combos.cpp  main.cpp  sc_1.txt
2019/day3/p1/: main.cpp
2019/day3/p2/: main.cpp
2019/day4/p2/: main.cpp
2019/day5/p2/: main.cpp
2019/day7/p2/: main.cpp
2019/day8/p2/: main.cpp
2019/day9/p1/: main.cpp
2019/intcode/: Interpreter.hpp
2020/day01/p1/: main.cpp
2020/day01/p2/: main.cpp
2020/day02/p1/: main.cpp
2020/day02/p2/: main.cpp
2020/day03/p1/: main.cpp
2020/day03/p2/: main.cpp
2020/day04/p1/: main.cpp
2020/day04/p2/: main.cpp
2020/day05/p1/: main.cpp
2020/day05/p2/: main.cpp
2020/day06/p1/: main.cpp
2020/day06/p2/: main.cpp
2020/day07/p1/: main.cpp
2020/day07/p2/: main.cpp
2020/day08/p1/: main.cpp
2020/day08/p2/: main.cpp
2020/day09/p1/: main.cpp
2020/day09/p2/: main.cpp
2020/day10/p1/: main.cpp
2020/day10/p2/: main.cpp
2020/day11/p1/: main.cpp
2020/day11/p2/: main.cpp
2020/day12/p1/: main.cpp
2020/day12/p2/: main.cpp  rotate_left_180.txt  rotate_left_90.txt  rotate_right_180.txt  rotate_right_270.txt
2020/day13/p1/: main.cpp
2020/day13/p2/: main.cpp
2020/day14/p1/: main.cpp
2020/day14/p2/: main.cpp
2020/day15/p1/: main.cpp
2020/day16/p1/: main.cpp
2020/day16/p2/: main.cpp
2020/day17/p1/: main.cpp
2020/day17/p2/: main.cpp
2020/day18/p1/: main.cpp
2020/day18/p2/: main.cpp
2020/day19/p1/: main.cpp
2020/day19/p2/: main.cpp
2020/day20/p1/: main.cpp  test1.txt  test2.txt  test3.txt  user_example1.txt
2020/day20/p2/: main.cpp
2020/day21/p1/: main.cpp
2020/day21/p2/: main.cpp
2020/day22/p1/: main.cpp
2020/day22/p2/: main.cpp
2020/day23/p1/: main.cpp
2020/day23/p2/: main.cpp
2020/day24/p1/: main.cpp
2020/day24/p2/: main.cpp
2020/day25/p1/: main.cpp
2021/day01/p1/: Cargo.toml
2021/day01/p2/: Cargo.toml
2021/day02/p1/: Cargo.toml
2021/day02/p2/: Cargo.toml
2021/day03/p1/: Cargo.toml
2021/day03/p2/: Cargo.toml
2021/day04/p1/: Cargo.toml
2021/day04/p2/: Cargo.toml
2021/day05/p1/: Cargo.toml
2021/day05/p2/: Cargo.toml
2021/day06/p1/: Cargo.toml
2021/day07/p1/: Cargo.toml
day1/p1/: main.cpp
lib/: AStar.hpp  Algorithms.hpp  Cargo.toml  Containers.hpp  Crypto.h  FileUtil.cpp  FileUtil.h  StringUtil.cpp  StringUtil.h  algorithms.hpp  containers.hpp  file_util.cpp
lib/src/: lib.rs
(+163 files in other folders)
