[workspace]

members = [
    "2021/day01/p1",
    "2021/day01/p2",
    "2021/day02/p1",
    "2021/day02/p2",
    "2021/day03/p1",
    "2021/day03/p2",
    "2021/day04/p1",
    "2021/day04/p2",
    "2021/day05/p1",
    "2021/day05/p2",
    "2021/day06/p1",
    # 2021/day06/p2 is identical to p1
    "2021/day07/p1",
    "2021/day07/p2",
]