[workspace]

members = [
    "lib",
    "2021/day01/p1",
    "2021/day01/p2",
    "2021/day02/p1",
    "2021/day02/p2",
    "2021/day03/p1",
    "2021/day03/p2",
    "2021/day04/p1",
    "2021/day04/p2",
    "2021/day05/p1",
    "2021/day05/p2",
    "2021/day06/p1",
    # "2021/day06/p2", is identical to p1
    "2021/day07/p1",
    "2021/day07/p2",
    "2021/day08/p1",
    "2021/day08/p2",
    "2021/day09/p1",
    "2021/day09/p2",
    "2021/day10/p1",
    "2021/day10/p2",
    "2021/day11/p1",
    "2021/day11/p2",
    "2021/day12/p1",
    "2021/day12/p2",
    "2021/day13/p1",
    # "2021/day13/p2", is a cli param to p1
    "2021/day14/p1",
    "2021/day14/p2",
    "2021/day15/p1",
    "2021/day15/p2",
    "2021/day16/p1",
    "2021/day16/p2",
    "2021/day17/p1",
    "2021/day17/p2",
    # "2021/day18/p1",

    "2022/day01/p1",
    "2022/day01/p2",
    "2022/day02/p1",
    "2022/day02/p2",
    "2022/day03/p1",
    "2022/day03/p2",
    "2022/day04/p1",
    "2022/day04/p2",
    "2022/day05/p1",
    "2022/day05/p2",
    "2022/day06/p1",
    "2022/day06/p2",
    "2022/day07/p1",
    "2022/day07/p2",
    "2022/day08/p1",
    "2022/day08/p2",
    "2022/day09/p1",
    "2022/day09/p2",
]